--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-# This file lists all contributors to this repository
+# This file lists all individuals having contributed content to the repository.
+# For how it is generated, see `hack/generate-authors.sh`.
+
 Rebecca Ogunyemi <olufunmilayosmiles@gmail.com>
-Abiola Bello
